Change Point on Point16, ulong on uint, "Main.netMode == NetmodeID.Server" on Main. dedServ, fix some bugs( and add some new), CreatePacket sender now optional.

--- a/LootrMod.csproj
+++ b/LootrMod.csproj
@@ -5,9 +5,10 @@
 
 	<!-- General -->
 	<PropertyGroup>
-		
+	  <Platforms>AnyCPU</Platforms>
+		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
 	</PropertyGroup>
-
+	
 	<!-- References -->
 	<ItemGroup>
 		
